Fix scrollbar positioning in information and manage players dialog, due to work-around for older iOS devices introduced in 0.3.0

--- a/MaterialSkin/HTML/material/html/css/desktop.css
+++ b/MaterialSkin/HTML/material/html/css/desktop.css
@@ -262,3 +262,7 @@ body {
  width: calc(1vw * var(--splitter-pc));
 }
 
+.ios-vcard-text-workaround {
+ top:48px;
+ height:calc((var(--vh, 1vh)*100) - 48px);
+}
